# kiro-doc-io

./: .gitignore  GOOGLE_API_SETUP.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  analyze_and_create_spec.py  config.json.example  create_specification.py  demo_readers.py  export_all_to_readers.py  export_spec_to_md.py  pyproject.toml  requirements.txt  test_powerpoint_writer.py  test_readers.py  test_spec_export.py  verify_spec_export.py
.kiro/settings/: mcp.json.example
.kiro/specs/document-format-mcp-server/: design.md  requirements.md  tasks.md
.kiro/steering/: japanese-communication.md
docs/: QUICKSTART.md  SETUP.md
scripts/: README.md
scripts/analysis/: analyze_excel_structure.py  check_excel_content.py
scripts/demo/: verify_generated_pptx.py
scripts/export/: export_excel_to_md.py
scripts/setup/: create_sample_files.py
src/document_format_mcp_server/: __init__.py  server.py
src/document_format_mcp_server/readers/: __init__.py  excel_reader.py  google_reader.py  powerpoint_reader.py  word_reader.py
src/document_format_mcp_server/tools/: __init__.py  tool_definitions.py  tool_handlers.py
tests/: __init__.py  manual_test_readers.py  test_excel_reader.py  test_integration.py  test_powerpoint_reader.py  test_word_reader.py  test_writers.py
tests/property_tests/: __init__.py  test_properties_11_15.py  test_properties_1_5.py  test_properties_6_10.py
tests/readers/: __init__.py  test_excel_reader.py  test_google_reader.py  test_powerpoint_reader.py  test_word_reader.py
tests/writers/: __init__.py  test_excel_writer.py  test_google_writer.py  test_powerpoint_writer.py  test_word_writer.py
(+10 files in other folders)
